--- a/02.juegocartas/css.css
+++ b/02.juegocartas/css.css
@@ -96,4 +96,8 @@ td {
     width: 100%;
     margin-top: 50px;
     padding: 5px;
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(186,130,164,1) 9%, rgba(252,176,69,1) 100%);
+
+
 }
