--- a/02.juegocartas/estilos/estilos.scss
+++ b/02.juegocartas/estilos/estilos.scss
@@ -2,7 +2,7 @@
 
 
 
-
+$colorTabla: rgba(223, 73, 73, 0.83);
 
 
 body{
@@ -59,6 +59,7 @@ table,
 th,
 td {
     border: solid black 2px;
+    background-color: $colorTabla;
 }
 
 .ocultar {
