--- a/02.juegocartas/estilos/estilos.css
+++ b/02.juegocartas/estilos/estilos.css
@@ -20,9 +20,10 @@ body {
 }
 
 .cartas {
-  background-image: url("imagenes/dorso.jpg");
+  background-image: url("../imagenes/dorso.png");
   background-size: contain;
   background-repeat: no-repeat;
+  
 }
 
 .puntuacion {
