--- a/02.juegocartas/estilos/estilos.css
+++ b/02.juegocartas/estilos/estilos.css
@@ -155,6 +155,7 @@ background: linear-gradient(90deg, rgba(252,69,69,1) 55%, rgba(214,224,138,1) 94
 
   .idioma {
     grid-column-start: 2;
+    grid-row-start: 1;
   }
 
   .ranking {
